Bug 1320000 - Part 2: Make XBLChildrenElement::ParseAttribute delegate to its superclass. r=mrbkap

MozReview-Commit-ID: 8qXryZXKi4m